--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
+    "daisyui": "^1.25.4",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "next": "^12.0.0",
@@ -29,6 +31,7 @@
     "tailwindcss": "^3.0.13"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.1",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
