--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rimraf": "^3.0.2",
+    "sharp": "^0.30.1",
     "tailwindcss": "^3.0.13"
   },
   "devDependencies": {
