--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,7 @@
     "^@/context/(.*)$",
     "^@/pages/(.*)$",
     "^@/machines/(.*)$",
+    "^@/styles/(.*)$",
     "^[./]"
   ],
   "importOrderSeparation": true,
