--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@splidejs/react-splide": "^0.6.20",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
     "daisyui": "^2.0.6",
