--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check-format": "prettier --check .",
     "check-lint": "next lint",
     "format": "prettier --write .",
+    "fix-all": "npm run format && npm run lint && npm run clean",
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
     "prepare": "husky install"
   },
