--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "next build",
+    "build": "npm run clean && next build",
     "start": "next start -p 3000",
     "lint": "next lint --fix",
     "clean": "rimraf .next/cache && rimraf node_modules/.cache .next",
