--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@splidejs/react-splide": "^0.6.20",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
     "daisyui": "^2.0.6",
+    "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
+    "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "next": "^12.0.0",
+    "next-with-apollo": "^5.3.0",
     "postcss": "^8.4.5",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
