--- a/package.json
+++ b/package.json
@@ -17,18 +17,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@apollo/react-hooks": "^4.0.0",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@splidejs/react-splide": "^0.6.20",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link-http": "^1.5.17",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
     "daisyui": "^2.0.6",
+    "deepmerge": "^4.2.2",
     "graphql": "^16.3.0",
-    "graphql-tag": "^2.12.6",
     "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
