--- a/package.json
+++ b/package.json
@@ -27,15 +27,20 @@
     "daisyui": "^2.0.6",
     "deepmerge": "^4.2.2",
     "graphql": "^16.3.0",
+    "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "next": "^12.0.0",
+    "next-mdx-remote": "^4.1.0",
     "next-with-apollo": "^5.3.0",
     "postcss": "^8.4.5",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "rimraf": "^3.0.2",
     "sharp": "^0.30.1",
     "tailwindcss": "^3.0.13"
